--- a/Web/ExtentReports/ExtentReportResults.html
+++ b/Web/ExtentReports/ExtentReportResults.html
@@ -53,7 +53,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2020-06-29 20:22:01</span>
+					<span class='suite-started-time'>2020-07-01 20:34:14</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -83,25 +83,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 0m 9s+366ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 0m 8s+712ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 0m 9s+366ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 0m 8s+712ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2020-06-29 20:21:52</span> 
+							<span class='panel-lead suite-started-time'>2020-07-01 20:34:05</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2020-06-29 20:22:01</span> 
+							<span class='panel-lead suite-ended-time'>2020-07-01 20:34:14</span> 
 						</div> 
 					</div>
 				</div>
@@ -180,7 +180,7 @@
 										</tr>
 										<tr>
 											<td>Host Name</td>
-											<td>Thatos-MacBook-Pro.local</td>
+											<td>Thatos-MBP.Dlink</td>
 										</tr>
 								</tbody>
 							</table>
@@ -237,7 +237,7 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active pass ' extentid='61ad3fda-1f7b-4eb7-a0ce-582d1c71a3db'>
+										<li class='collection-item test displayed active pass ' extentid='053c550b-cc7a-4e47-9a59-d699d5302ac9'>
 											<div class='test-head'>
 												<span class='test-name'>User1 </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
@@ -245,9 +245,9 @@
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-06-29 20:21:52</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2020-06-29 20:21:57</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 4s+926ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-07-01 20:34:05</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2020-07-01 20:34:10</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 4s+736ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
@@ -264,72 +264,72 @@
 														<tbody>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>20:21:55</td>
+																	<td class='timestamp'>20:34:08</td>
 																	<td class='step-details'>table was present</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>20:21:55</td>
+																	<td class='timestamp'>20:34:08</td>
 																	<td class='step-details'>AddUser was clicked successfully</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>20:21:56</td>
+																	<td class='timestamp'>20:34:08</td>
 																	<td class='step-details'>FName1 name was entered successfully</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>20:21:56</td>
+																	<td class='timestamp'>20:34:08</td>
 																	<td class='step-details'>LName1 last name was entered successfully</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>20:21:56</td>
+																	<td class='timestamp'>20:34:09</td>
 																	<td class='step-details'>User1 username was entered successfully</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>20:21:56</td>
+																	<td class='timestamp'>20:34:09</td>
 																	<td class='step-details'>password was entered successfully</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>20:21:56</td>
+																	<td class='timestamp'>20:34:09</td>
 																	<td class='step-details'>companyB was clicked successfully</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>20:21:56</td>
+																	<td class='timestamp'>20:34:09</td>
 																	<td class='step-details'>roles dropdown was clicked successfully</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>20:21:56</td>
+																	<td class='timestamp'>20:34:09</td>
 																	<td class='step-details'>customer was selected successfully</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>20:21:57</td>
+																	<td class='timestamp'>20:34:09</td>
 																	<td class='step-details'>admin@gmail.com email was entered successfully</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>20:21:57</td>
+																	<td class='timestamp'>20:34:09</td>
 																	<td class='step-details'>082555 cellphone number was entered successfully</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>20:21:57</td>
+																	<td class='timestamp'>20:34:10</td>
 																	<td class='step-details'>save button was clicked successfully</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>20:21:57</td>
+																	<td class='timestamp'>20:34:10</td>
 																	<td class='step-details'>User1 users were listed successfully</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>20:21:57</td>
+																	<td class='timestamp'>20:34:10</td>
 																	<td class='step-details'>Test Passed</td>
 																</tr>
 														</tbody>
@@ -339,7 +339,7 @@
 												</div>
 											</div>
 										</li>
-										<li class='collection-item test displayed active pass ' extentid='dfc9ef32-1684-43a7-9c72-db56ec6589f0'>
+										<li class='collection-item test displayed active pass ' extentid='5e6b8a28-9512-4f5a-b1b4-0bbf7ac6ba72'>
 											<div class='test-head'>
 												<span class='test-name'>User2 </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
@@ -347,9 +347,9 @@
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-06-29 20:21:57</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2020-06-29 20:22:01</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 4s+109ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-07-01 20:34:10</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2020-07-01 20:34:13</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 3s+651ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
@@ -366,72 +366,72 @@
 														<tbody>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>20:22:00</td>
+																	<td class='timestamp'>20:34:12</td>
 																	<td class='step-details'>table was present</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>20:22:00</td>
+																	<td class='timestamp'>20:34:12</td>
 																	<td class='step-details'>AddUser was clicked successfully</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>20:22:00</td>
+																	<td class='timestamp'>20:34:12</td>
 																	<td class='step-details'>FName2 name was entered successfully</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>20:22:00</td>
+																	<td class='timestamp'>20:34:12</td>
 																	<td class='step-details'>LName2 last name was entered successfully</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>20:22:00</td>
+																	<td class='timestamp'>20:34:12</td>
 																	<td class='step-details'>User2 username was entered successfully</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>20:22:00</td>
+																	<td class='timestamp'>20:34:13</td>
 																	<td class='step-details'>password was entered successfully</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>20:22:00</td>
+																	<td class='timestamp'>20:34:13</td>
 																	<td class='step-details'>companyA was clicked successfully</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>20:22:00</td>
+																	<td class='timestamp'>20:34:13</td>
 																	<td class='step-details'>roles dropdown was clicked successfully</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>20:22:01</td>
+																	<td class='timestamp'>20:34:13</td>
 																	<td class='step-details'>admin was clicked successfully</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>20:22:01</td>
+																	<td class='timestamp'>20:34:13</td>
 																	<td class='step-details'>admin@gmail.com email was entered successfully</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>20:22:01</td>
+																	<td class='timestamp'>20:34:13</td>
 																	<td class='step-details'>083444 cellphone number was entered successfully</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>20:22:01</td>
+																	<td class='timestamp'>20:34:13</td>
 																	<td class='step-details'>save button was clicked successfully</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>20:22:01</td>
+																	<td class='timestamp'>20:34:13</td>
 																	<td class='step-details'>User2 users were listed successfully</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>20:22:01</td>
+																	<td class='timestamp'>20:34:13</td>
 																	<td class='step-details'>Test Passed</td>
 																</tr>
 														</tbody>
